--- a/site/app/getting-started.html
+++ b/site/app/getting-started.html
@@ -62,7 +62,7 @@
         <h2 id="firsttests">First tests</h2>
         <p>Create a new folder to hold your test files.</p>
         <pre><code><span>~</span> mkdir myfirsttest
-          <span>~</span> cd myfirsttest</code></pre>
+<span>~</span> cd myfirsttest/</code></pre>
           <p>Now we can make a basic first test. Once you've done this a couple of time you won't need help but for starters, use the helper:</p>
           <pre><code><span>~/myfirsttest</span> hardy init</code></pre>
           <p>This will create the important folders and files</p>
