--- a/site/app/index.html
+++ b/site/app/index.html
@@ -60,17 +60,12 @@
         <h2>Installation</h2>
         <p>Recommended installation via <a href="https://npmjs.org/package/hardy" title="hardy">npm</a></p>
         <p><code>npm install -g hardy</code></p>
-<!--         <h2>Chrome extension</h2>
-        <p>In order to simplify test creation, there's a chrome devtools extension that lets you click around your page and outputs Hardy-compatible cucumber files.</p>
-        <p><a class="btn" href="/chrome-extension.html">Find out more &raquo;</a></p>
- -->      </div>
+      </div>
       <div class="span4">
         <h2>What is CSS testing?</h2>
         <p>Tests that make sure your visual layout is as sturdy as your javascript. After your page looks the way you want it to, create a few test cases of key styles. During your automated build, run those tests to ensure everything looks as it should.</p>
 
-        <!-- <p>To find out more, visit <a href="http://csste.st/">csste.st</a></p> -->
-
-        <p><a class="btn" href="http://csste.st/">Find out more at csste.st&raquo;</a></p>
+        <p><a class="btn" href="http://csste.st/">Find out more at csste.st &raquo;</a></p>
       </div>
       <div class="span4">
         <h2>What is Hardy?</h2>
@@ -80,14 +75,13 @@
     </div>
 
     <hr>
-
     <footer>
       <p>Hardy is a project by <a href="http://thingsinjars.com/">Simon Madine</a>.</p>
     </footer>
+    <div class="ribbon-wrapper-green"><div class="ribbon-green">BETA</div></div>
 
-  </div> <!-- /container -->
+  </div>
 
-  <!-- Google Analytics: change UA-20281865-6 to be your site's ID. -->
   <script>
   var _gaq=[['_setAccount','UA-20281865-6'],['_trackPageview']];
   (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
@@ -95,29 +89,6 @@
     s.parentNode.insertBefore(g,s)}(document,'script'));
   </script>
 
-  <!-- build:js scripts/main.js -->
-  <script src="bower_components/jquery/jquery.js"></script>
-  <script src="scripts/main.js"></script>
-  <!-- endbuild -->
-
-  <!-- build:js(.tmp) scripts/coffee.js -->
-  <script src="scripts/hello.js"></script>
-  <!-- endbuild -->
-
-  <!-- build:js scripts/plugins.js -->
-  <script src="bower_components/sass-bootstrap/js/bootstrap-affix.js"></script>
-  <script src="bower_components/sass-bootstrap/js/bootstrap-alert.js"></script>
-  <script src="bower_components/sass-bootstrap/js/bootstrap-dropdown.js"></script>
-  <script src="bower_components/sass-bootstrap/js/bootstrap-tooltip.js"></script>
-  <script src="bower_components/sass-bootstrap/js/bootstrap-modal.js"></script>
-  <script src="bower_components/sass-bootstrap/js/bootstrap-transition.js"></script>
-  <script src="bower_components/sass-bootstrap/js/bootstrap-button.js"></script>
-  <script src="bower_components/sass-bootstrap/js/bootstrap-popover.js"></script>
-  <script src="bower_components/sass-bootstrap/js/bootstrap-typeahead.js"></script>
-  <script src="bower_components/sass-bootstrap/js/bootstrap-carousel.js"></script>
-  <script src="bower_components/sass-bootstrap/js/bootstrap-scrollspy.js"></script>
-  <script src="bower_components/sass-bootstrap/js/bootstrap-collapse.js"></script>
-  <script src="bower_components/sass-bootstrap/js/bootstrap-tab.js"></script>
-  <!-- endbuild -->
+  
 </body>
 </html>
