--- a/css-test-steps.html
+++ b/css-test-steps.html
@@ -24,14 +24,14 @@
                   <li class="active"><a href="/getting-started.html"><span>Getting Started</span> <i class="icon-arrow-right"></i></a></li>
                   <li><a href="https://github.com/thingsinjars/GhostStory"><i class="icon-document-alt-stroke"></i><span>Source</span></a></li>
                 </ul>
-              </div><!--/.nav-collapse -->
+              </div>
             </div>
           </div>
         </div>
 
         <div class="container content">
 
-          <!-- Example row of columns -->
+
           <div class="row">
             <div class="span3">
               <ul class="nav nav-list">
