Travis build 36 pushed to gh-pages

--- a/getting-started.html
+++ b/getting-started.html
@@ -5,7 +5,8 @@
 <p>The recommended installation method is via NPM:</p>
 <pre><code><span>~</span> npm install -g hardy</code></pre>
 
-<p>This will install Hardy as a global node module and put an executable in your path. It will also include a local version of Selenium in case you don&#39;t have that already and a local copy of PhantomJS for <a href="http://csste.st/techniques/image-diff.html">image diff</a> test processing.</p>
+<p>This will install Hardy as a global node module and put an executable in your path. It will also include a local version of Selenium in case you don&#39;t have that already and a local copy of PhantomJS for <a href="http://csste.st/techniques/image-diff.html">image diff</a> test processing. </p>
+<p><em>Note: This copy of PhantomJS will not be available for testing against unless you add it to your system PATH variable.</em></p>
 <h2 id="first-tests">First tests</h2>
 
 <p>Create a new folder to hold your test files.</p>
@@ -30,7 +31,7 @@ Then &quot;section &gt; p&quot; should have &quot;color&quot; of &quot;rgb(68, 6
 <pre><code><span>~/myfirsttest</span> hardy .</code></pre>
 
 <p>  You should see successful output:</p>
-<pre><code>Hardy v0.0.2
+<pre><code>Hardy v0.0.11
 CSS Utils Steps Loaded
 CSS Steps Loaded
 Generic Steps Loaded
