Travis build 38 pushed to gh-pages

--- a/selector-maps.html
+++ b/selector-maps.html
@@ -37,4 +37,5 @@ Then &quot;standard paragraph&quot; should have &quot;color&quot; of &quot;rgb(6
 And &quot;standard paragraph&quot; should have &quot;font-size&quot; of &quot;16px&quot;
 And &quot;standard paragraph&quot; should have &quot;display&quot; of &quot;block&quot;</code></pre>
 <p>If you ever have to change the selector, you only need to update the <code>selectors/selectors.js</code> file and all the references are still valid.</p>
+<p>Continue to read about <a href="/css-test-steps.html">CSS testing steps</a>.</p>
 </div><footer><p class="bar"> <a href="http://twitter.com/thingsinjars">A project by Simon Madine</a></p></footer></div><div class="ribbon-wrap"><div class="ribbon">Beta</div></div><script src="/scripts/hardy.io.js"></script></body></html>
