Travis build 39 pushed to gh-pages

--- a/css-test-steps.html
+++ b/css-test-steps.html
@@ -19,4 +19,5 @@
 <p>This behaves as though the user typed the string into the input identified by the selector.</p>
 <h3><code>Then I submit the form &#39;&lt;css selector&gt;&#39;</code></h3>
 <p>Equivalent to pressing submit on the form identified by the selector.</p>
+<p>There is already quite a lot that can be accomplished with these steps but you will probably also need to write your own <a href="/custom-steps.html">custom steps</a> for complete coverage.</p>
 </div><footer><p class="bar"> <a href="http://twitter.com/thingsinjars">A project by Simon Madine</a></p></footer></div><div class="ribbon-wrap"><div class="ribbon">Beta</div></div><script src="/scripts/hardy.io.js"></script></body></html>
